管理员界面调整

--- a/src/main/webapp/manage_buyer.html
+++ b/src/main/webapp/manage_buyer.html
@@ -117,7 +117,7 @@
                             <li><a href="manage_items.html"><h5>商品管理</h5></a>
                             <li><a href="manage_permissions.html"><h5>权限管理</h5></a>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="manager_password.html"><h5>修改密码</h5></a>
+                            <!--<li><a href="manager_password.html"><h5>修改密码</h5></a>-->
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -134,8 +134,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
