--- a/src/main/webapp/manage_store.html
+++ b/src/main/webapp/manage_store.html
@@ -103,21 +103,21 @@
                         <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="Manage-seller.html"><h5>商家管理</h5></a>
+                            <li><a href="manage_seller.html"><h5>商家管理</h5></a>
                             </li>
-                            <li><a href="Manage-store.html"><h5>商铺管理</h5></a>
+                            <li><a href="manage_store.html"><h5>商铺管理</h5></a>
                             </li>
-                            <li><a href="Manage-user.html"><h5>买家管理</h5></a>
+                            <li><a href="manage_buyer.html"><h5>买家管理</h5></a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="Manage-items.html"><h5>商品管理</h5></a>
-                            <li><a href="Manage-control.html"><h5>权限管理</h5></a>
+                            <li><a href="manage_items.html"><h5>商品管理</h5></a>
+                            <li><a href="manage_permissions.html"><h5>权限管理</h5></a>
                                 <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="ManagerMessage.html"><h5>个人信息</h5></a>
+                            <!--<li><a href="ManagerMessage.html"><h5>个人信息</h5></a>-->
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -126,7 +126,7 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="#">登 陆</a>
+                            <li><a href="manager_login.html">登 陆</a>
                             </li>
                             <li><a href="#">返 回</a>
                             </li>
@@ -134,8 +134,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
