--- a/src/main/webapp/manage_permissions.html
+++ b/src/main/webapp/manage_permissions.html
@@ -117,7 +117,7 @@
                             <li><a href="manage_items.html"><h5>商品管理</h5></a>
                             <li><a href="manage_permissions.html"><h5>权限管理</h5></a>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="manager_password.html"><h5>修改密码</h5></a>
+                            <!--<li><a href="manager_password.html"><h5>修改密码</h5></a>-->
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -134,8 +134,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
 									<input type="button" value="查询" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>								
                             	</div>
                             	<div style="float:left;margin-left:75px">
-                            		<input type="button" value="添加管理员" class="ui-form__btn btn btn-dark" onclick="window.location='manager-add.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
+                            		<input type="button" value="添加管理员" class="ui-form__btn btn btn-dark" onclick="window.location='manager_add.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
                             	</div>
                             </div>
                     	</form>
