--- a/src/main/webapp/manager_add.html
+++ b/src/main/webapp/manager_add.html
@@ -121,7 +121,7 @@
                             <li><a href="manage_items.html"><h5>商品管理</h5></a>
                             <li><a href="manage_permissions.html"><h5>权限管理</h5></a>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="manager_password.html"><h5>修改密码</h5></a>
+                            <!--<li><a href="manager_password.html"><h5>修改密码</h5></a>-->
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -138,8 +138,8 @@
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
     <!-- end .header-->
     <div class="l-main-content l-main-content_w-border">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
+            <div class="row"style="float: right;margin-right: 450px">
+                <div class="col-xs-12" >
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
@@ -166,16 +166,16 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="woocommerce">
+                    <div class="woocommerce" style="width:1000px;float: right;margin-right: 200px">
                        
                         <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               enctype="multipart/form-data" _lpchecked="1">
-                            <div class="col2-set" id="customer_details">
+                            <div class="col2-set" id="customer_details" >
                             <!-- 信息输入 -->
-                                <div class="col-1">
-                                    <div class="woocommerce-billing-fields"> 
-                                    	<h3>输入管理员信息</h3>                                   
-                                       	
+                                <div class="col-1" style="float: right;margin-right: 100px">
+                                    <div class="woocommerce-billing-fields">
+                                    	<h3>输入管理员信息</h3>
+
                                         <p class="form-row form-row form-row-wide ">
                                             <!--密码，）/////////////////////////////////////////////////////////////-->
                                             <label>密 码 (Password）</label>
@@ -197,17 +197,17 @@
                                 </div>                                
                             </div>
                             <!-- 确认信息正确后，返回显示数据库自动生成的管理员ID，以用作管理员登陆的账号###########################-->
-                            <div id="order_review" class="woocommerce-checkout-review-order">
+                            <div id="order_review" class="woocommerce-checkout-review-order" style="width:520px;float: right;margin-right: 80px">
 
                                 <div id="payment" class="woocommerce-checkout-payment">
 
                                     <div class="form-row place-order">
 		
-                                        <input type="submit" class="button alt" id="place_order" value="确 认 Save"
-                                               data-value="Place order"/>
+                                        <input type="submit" class="button alt" id="place_order1" value="确 认 Save"
+                                               data-value="Place order" />
                                     </div>
                                     <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="返 回 Return"
+                                        <input type="button" class="button alt" id="place_order2" value="返 回 Return"
                                                data-value="Place order" style="line-height:1.3;border:0" onclick="window.history.back(-1)"/>                                        
                                     </div>
                                 </div>
@@ -309,10 +309,6 @@
 
 <!-- ++++++++++++-->
 <!-- MAIN SCRIPTS-->
-<!-- ++++++++++++-->
-<script src="../js/jquery-1.12.4.min.js"></script>
-<script src="../js/jquery-migrate-1.2.1.js"></script>
-<script src="../js/modernizr.custom.js"></script>
 <!-- Bootstrap-->
 <script src="static/wt/js/jquery-1.12.4.min.js"></script>
 <script src="static/wt/js/jquery-migrate-1.2.1.js"></script>
