--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -159,14 +159,13 @@
                                         </table>
                                     </div>
                                     <div class="form-row place-order">
-
-                                        <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <a href="home.html"><input type="button" class="button alt"
-                                                                   value="返 回 back"/></a>
+                                        <center>
+                                            <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                            <a href="home.html"><input type="button" class="button alt"
+                                                                       style="width: 400px"
+                                                                       value="返 回 主 页 home"/></a></center>
                                     </div>
                                 </div>
-
-
 
 
                                 <div class="tab-pane fade" id="wait">
@@ -176,11 +175,11 @@
                                             <thead>
                                             <tr>
                                                 <td class="product-thumbnail">订 单 号</td>
-                                                <td class="product-name" ><h5>下单时间</h5></td>
-                                                <td class="product-price" ><h5>总 价 格</h5></td>
-                                                <td class="product-price" ><h5>邮寄方式</h5></td>
-                                                <td class="product-price" ><h5>收货地址</h5></td>
-                                                <td class="product-price" ><h5>订单状态</h5></td>
+                                                <td class="product-name"><h5>下单时间</h5></td>
+                                                <td class="product-price"><h5>总 价 格</h5></td>
+                                                <td class="product-price"><h5>邮寄方式</h5></td>
+                                                <td class="product-price"><h5>收货地址</h5></td>
+                                                <td class="product-price"><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
                                             </tr>
@@ -192,10 +191,11 @@
                                         </table>
                                     </div>
                                     <div class="form-row place-order">
-
-                                        <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <a href="home.html"><input type="button" class="button alt"
-                                                                   value="返 回 back"/></a>
+                                        <center>
+                                            <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                            <a href="home.html"><input type="button" class="button alt"
+                                                                       style="width: 400px"
+                                                                       value="返 回 主 页 home"/></a></center>
                                     </div>
                                 </div>
                                 <!--待评价模块///////////////////////////////////////////////////////////////////////////////////////-->
@@ -205,11 +205,11 @@
                                             <thead>
                                             <tr>
                                                 <td class="product-thumbnail">订 单 号</td>
-                                                <td class="product-name" ><h5>下单时间</h5></td>
-                                                <td class="product-price" ><h5>总 价 格</h5></td>
-                                                <td class="product-price" ><h5>邮寄方式</h5></td>
-                                                <td class="product-price" ><h5>收货地址</h5></td>
-                                                <td class="product-price" ><h5>订单状态</h5></td>
+                                                <td class="product-name"><h5>下单时间</h5></td>
+                                                <td class="product-price"><h5>总 价 格</h5></td>
+                                                <td class="product-price"><h5>邮寄方式</h5></td>
+                                                <td class="product-price"><h5>收货地址</h5></td>
+                                                <td class="product-price"><h5>订单状态</h5></td>
                                                 <td class="product-price"><h5>我的留言</h5></td>
                                                 <td class="product-remove"><h5>操 作</h5></td>
                                             </tr>
@@ -222,10 +222,11 @@
                                     </div>
 
                                     <div class="form-row place-order">
-
-                                        <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <a href="home.html"><input type="button" class="button alt"
-                                                                   value="返 回 back"/></a>
+                                        <center>
+                                            <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                            <a href="home.html"><input type="button" class="button alt"
+                                                                       style="width: 400px"
+                                                                       value="返 回 主 页 home"/></a></center>
                                     </div>
                                 </div>
 
@@ -253,10 +254,11 @@
                                     </div>
 
                                     <div class="form-row place-order">
-
-                                        <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <a href="home.html"><input type="button" class="button alt"
-                                                                   value="返 回 back"/></a>
+                                        <center>
+                                            <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                            <a href="home.html"><input type="button" class="button alt"
+                                                                       style="width: 400px"
+                                                                       value="返 回 主 页 home"/></a></center>
                                     </div>
                                 </div>
 
@@ -284,10 +286,11 @@
                                     </div>
 
                                     <div class="form-row place-order">
-
-                                        <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                        <a href="home.html"><input type="button" class="button alt"
-                                                                   value="返 回 back"/></a>
+                                        <center>
+                                            <!--页面最下方，返回主页，按钮模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                            <a href="home.html"><input type="button" class="button alt"
+                                                                       style="width: 400px"
+                                                                       value="返 回 主 页 home"/></a></center>
                                     </div>
                                 </div>
 
@@ -425,7 +428,7 @@
 <script src="static/js/order.js"></script>
 <script>
     $(function () {
-        var id=getId();
+        var id = getId();
         order1(id);
         display2(id);
     })
