--- a/src/main/webapp/manage_seller.html
+++ b/src/main/webapp/manage_seller.html
@@ -126,7 +126,7 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="manager_login">登 陆</a>
+                            <li><a href="manager_login.html">登 陆</a>
                             </li>
                             <li><a href="#">退 出</a>
                             </li>
