--- a/src/main/webapp/manager_login.html
+++ b/src/main/webapp/manager_login.html
@@ -168,7 +168,7 @@
                 <div class="col-md-12">
                     <div class="woocommerce" style="width:1000px;float: right;">
                        
-                        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                        <form id="manager_login" name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                             <!-- 信息输入 -->
@@ -179,12 +179,12 @@
                                         <p class="form-row form-row form-row-wide ">
                                             <!--账号，也就是管理员的ID）/////////////////////////////////////////////////////////////-->
                                             <label>账 号 (Password）</label>
-                                            <input class="form-control" type="text" placeholder="Account" name="account">
+                                            <input class="form-control" type="text" placeholder="Account" name="mId">
                                         </p>
                                         <p class="form-row form-row form-row-wide ">
                                             <!--密码，）/////////////////////////////////////////////////////////////-->
                                             <label>密 码 (True Password）</label>
-                                            <input class="form-control" type="text" placeholder="Password" name="password">
+                                            <input class="form-control" type="text" placeholder="Password" name="mPassword">
                                         </p>                     	
                                     </div>
                                 </div>                                
@@ -195,7 +195,7 @@
                                     <div class="form-row place-order">
 		
                                         <input type="submit" class="button alt" id="place_order" value="登 陆 Login"
-                                               data-value="Place order" style="width: 480px"/>
+                                               data-value="Place order" style="width: 480px" onclick="manager_login()"/>
                                     </div>
 
                             </div>
@@ -325,6 +325,7 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/manager.js"></script>
 
 </body>
 
