--- a/src/main/webapp/manager_login.html
+++ b/src/main/webapp/manager_login.html
@@ -149,7 +149,7 @@
     <!-- end .header-->
     <div class="l-main-content l-main-content_w-border">
 
-            <div class="row" style="float: right;margin-right: 800px">
+            <div class="row" style="float: right;margin-right: 1050px">
                 <div class="col-xs-12" >
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
@@ -166,8 +166,8 @@
             </div>
             <div class="row" >
                 <div class="col-md-12">
-                    <div class="woocommerce" style="width:1000px;float: right;">
-                       
+                    <div class="woocommerce" style="width:1000px;float: right;margin-right: 180px">
+
                         <form id="manager_login" name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
@@ -184,7 +184,7 @@
                                         <p class="form-row form-row form-row-wide ">
                                             <!--密码，）/////////////////////////////////////////////////////////////-->
                                             <label>密 码 (True Password）</label>
-                                            <input class="form-control" type="text" placeholder="Password" name="mPassword">
+                                            <input class="form-control" type="password" placeholder="Password" name="mPassword">
                                         </p>                     	
                                     </div>
                                 </div>                                
